[package]
name = "cargo-luban"
version = "0.3.0"
authors = ["wang wei <soulww@163.com>"]
edition = "2018"

description = "This is a luban project generator"
homepage = "https://github.com/luban-project/luban"
keywords = ["generator"]
categories = ["command-line-utilities"]
license = "Apache-2.0/MIT"
maintenance = { status = "actively-developed" }
readme = "README.md"
exclude = ["release/*.exe"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
clap = "2.32.0"
tera = "0.11"
lazy_static = "1.2.0"
config = "0.9"
toml = "0.4"
dirs = "1.0"
git2 = "0.7"
nom-sql = "0.0.10"
case = "1.0.0"

sqlparser = "0.5.0"
wasmer-runtime = "0.11.0"
fs_extra = "0.1.0"
walkdir = "2.2.9"